# MCPExample

./: .gitignore  README.md  pyproject.toml
src/basicmcp/: __init__.py  __main__.py  mcp_server.py  test.py
src/basicmcp/codeqa/: util.py
src/basicmcp/codeqa/chat/: prompt.py  search.py
src/basicmcp/codeqa/index/: ingest.py  preprocess.py  run_ingestion.py  treesitter.py
src/basicmcp/dummy/: __init__.py  client.py  server.py
src/basicmcp/global_db/: ops.py
tests/: test_db_client.py  test_server.py
